// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`keyrack validation given: [case0] repo without keyrack.yml when: [t0] keyrack get --for repo then: stderr matches snapshot 1`] = `
"
🔐 keyrack get
   └─ ✋ ConstraintError: no keyrack.yml found in repo. --for repo requires keyrack.yml
      ├─ ran: keyrack get --for repo
      └─ hint: run: rhx keyrack init --org <your-org>

"
`;

exports[`keyrack validation given: [case0] repo without keyrack.yml when: [t1] keyrack unlock then: stderr matches snapshot 1`] = `
"
🔐 keyrack unlock
   └─ ✋ ConstraintError: host manifest not found. run: rhx keyrack init
      └─ ran: keyrack unlock

"
`;

exports[`keyrack validation given: [case1] repo with manifest but no host config when: [t0] keyrack get --key XAI_API_KEY --json (key not configured) then: stdout matches snapshot 1`] = `
{
  "fix": "rhx keyrack set --key XAI_API_KEY --env test",
  "message": "credential 'testorg.test.XAI_API_KEY' does not exist. set it first.",
  "slug": "testorg.test.XAI_API_KEY",
  "status": "absent",
}
`;

exports[`keyrack validation given: [case1] repo with manifest but no host config when: [t1] keyrack get --key XAI_API_KEY (human readable) then: stdout matches snapshot 1`] = `
"
🔐 keyrack
   └─ testorg.test.XAI_API_KEY
      ├─ status: absent 🫧
      └─ tip: rhx keyrack set --key XAI_API_KEY --env test

"
`;

exports[`keyrack validation given: [case2] repo with multiple keys, one absent when: [t0] keyrack get --for repo --json then: stdout matches snapshot 1`] = `
[
  {
    "fix": "rhx keyrack set --key XAI_API_KEY --env test",
    "message": "credential 'testorg.test.XAI_API_KEY' does not exist. set it first.",
    "slug": "testorg.test.XAI_API_KEY",
    "status": "absent",
  },
  {
    "fix": "rhx keyrack set --key GITHUB_APP_CREDS --env test",
    "message": "credential 'testorg.test.GITHUB_APP_CREDS' does not exist. set it first.",
    "slug": "testorg.test.GITHUB_APP_CREDS",
    "status": "absent",
  },
]
`;

exports[`keyrack validation given: [case3] validation errors when: [t0] keyrack set with invalid --mech then: stderr matches snapshot 1`] = `
"
🔐 keyrack set
   └─ ✋ ConstraintError: invalid --mech: must be one of PERMANENT_VIA_REPLICA, PERMANENT_VIA_REFERENCE, EPHEMERAL_VIA_SESSION, EPHEMERAL_VIA_GITHUB_APP, EPHEMERAL_VIA_AWS_SSO, EPHEMERAL_VIA_GITHUB_OIDC
      ├─ mechGiven: INVALID_MECH
      └─ ran: keyrack set --key TEST --mech INVALID_MECH --vault os.direct

"
`;

exports[`keyrack validation given: [case3] validation errors when: [t1] keyrack set with invalid --vault then: stderr matches snapshot 1`] = `
"
🔐 keyrack set
   └─ ✋ ConstraintError: invalid --vault: must be one of os.direct, os.secure, os.daemon, os.envvar, 1password, aws.config, aws.params, github.secrets
      ├─ vaultGiven: invalid_vault
      └─ ran: keyrack set --key TEST --mech PERMANENT_VIA_REPLICA --vault invalid_vault

"
`;

exports[`keyrack validation given: [case3] validation errors when: [t2] keyrack get without --for or --key then: stderr matches snapshot 1`] = `
"
🔐 keyrack get
   └─ ✋ ConstraintError: must specify --for repo or --key <slug>
      ├─ ran: keyrack get
      └─ hint:
         ├─ one key — rhx keyrack get --key $KEY
         └─ every key in this repo — rhx keyrack get --for repo

"
`;
